@@ -43,7 +43,7 @@ extern "C" {
 
 
 /*@null@*/ obex_object_t *obexftp_build_info (obex_t obex, uint8_t opcode);
-/*@null@*/ obex_object_t *obexftp_build_list (obex_t obex, const char *name);
+/*@null@*/ obex_object_t *obexftp_build_get_type (obex_t obex, const char *name, const char *type);
 /*@null@*/ obex_object_t *obexftp_build_get (obex_t obex, const char *name);
 /*@null@*/ obex_object_t *obexftp_build_rename (obex_t obex, const char *from, const char *to);
 /*@null@*/ obex_object_t *obexftp_build_del (obex_t obex, const char *name);
