@@ -1,3 +1,7 @@
+2003-10-01  Christian W. Zuckschwerdt  <zany@triq.net>
+
+	* Bluetooth support
+	
 2003-09-24  Christian W. Zuckschwerdt  <zany@triq.net>
 
 	* Ericsson phones are now working with the unified cobex.
